# clinical-trial-openenv

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  client.py  counterpart_reviewer.py  graders.py  inference.py  models.py  openenv.yaml  protocol_generator.py  pyproject.toml  regulatory_rules.py
server/: Dockerfile  __init__.py  app.py  environment.py  gradio_ui.py  requirements.txt
tests/: __init__.py  conftest.py  test_env.py
